[package]
name = "arb-stylus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal
arbos = { workspace = true }
arb-chainspec = { workspace = true }
arb-primitives = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }

# Wasmer
wasmer = { workspace = true }
wasmer-compiler = { git = "https://github.com/OffchainLabs/wasmer.git", rev = "5e7d8fd287436b01fa52d8dbcc9674b3cc7a66ca" }
wasmer-types = { git = "https://github.com/OffchainLabs/wasmer.git", rev = "5e7d8fd287436b01fa52d8dbcc9674b3cc7a66ca" }
wasmparser = { workspace = true }

nitro-prover = { workspace = true }
nitro-arbutil = { workspace = true }
nitro-brotli = { package = "brotli", git = "https://github.com/OffchainLabs/nitro.git", rev = "b1cf6db81afbc1f67c898ac9add5d37391ebd87b", features = ["cc_brotli"] }

# Revm
revm = { workspace = true }

# Common
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lazy_static = { workspace = true }
eyre = { workspace = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
wat = "1"
proptest = { workspace = true }

[lints]
workspace = true
