[package]
name = "arbos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arb-primitives = { workspace = true }
arb-storage = { workspace = true }
alloy-primitives = { workspace = true, features = ["std"] }
alloy-rlp = { workspace = true }
revm = { workspace = true }
thiserror = { workspace = true }
