[package]
name = "arbos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arb-chainspec = { workspace = true }
arb-primitives = { workspace = true }
arb-storage = { workspace = true }
alloy-primitives = { workspace = true, features = ["std"] }
alloy-rlp = { workspace = true }
revm = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
