[package]
name = "arbos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arb-alloy-consensus = { workspace = true }
arb-chainspec = { workspace = true }
arb-primitives = { workspace = true }
arb-storage = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["std"] }
alloy-rlp = { workspace = true }
revm = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
cc = "1"

[lints]
workspace = true
